# lagopus

./: .gitignore  .gitmodules  .travis.yml  FREEBSD.md  Makefile.in  QUICKSTART.md  README.md  aclocal.m4  configure  configure.ac
.github/: ISSUE_TEMPLATE.md
contrib/dpdk/: dpdk-1.6.0-centos-6.5.patch  dpdk-1.7.0-ubuntu-14.04.patch
debian/: Makefile.in  changelog  changelog.in  control_common.inc  control_dpdk.inc  control_raw_socket.inc  copyright.in  lagopus-DATAPLANE.dirs  lagopus-DATAPLANE.examples  lagopus-DATAPLANE.install.in  lagopus-DATAPLANE.postrm.in  lagopus-DATAPLANE.prerm  rules.in
debian/examples/: README  lagopus.default  lagopus.init.d
debian/source/: options
docs/: INSTALL.CENTOS65.md  build-env.txt  flow.txt  how-to-allocate-1gb-hugepages.md  how-to-genarate-benchmark.md  how-to-make-packages.md  how-to-use-ds-flow-cmd.md  how-to-use-tls.md  how-to-use-virtio-user.md  how-to-write-tests-in-lagopus.md
misc/examples/: 2x3pipe.dsl  2x3port.dsl  2x3raw.dsl  checkcert.conf  lagopus.dsl
mk/: Makefile.in.unity  autogen.sh  beautify  beautify_for_py  cat-deb-control.sh  config.guess  doDosText.sh  doxygen.conf.in  finalizeconfig  initdepend  make_dpdk.sh  make_pkg.sh  mkdirhier  mkfiles.sh  pkg_param.conf  rules.mk  unitycheck.sh  updateheaderconfig  vars.mk.in  warn-blame.sh
samples/: lagopus.conf
samples/ryu-certification/: README.md  lagopus_aux.conf  lagopus_dut.conf
src/agent/: Makefile.in  agent.c  agent.h  agent_config.c  agent_config.h  channel.c  channel.h  channel_mgr.c  channel_mgr.h  checkcert.c  checkcert.h  generator.c  generator.h  generator_lex.l  generator_parser.y  ofp_action.c  ofp_action.h  ofp_aggregate_handler.c  ofp_aggregate_handler.h  ofp_apis.h  ofp_band.c  ofp_band.h  ofp_band_stats.c  ofp_band_stats.h  ofp_barrier_handler.c  ofp_barrier_handler.h  ofp_bridge.c  ofp_bridgeq_mgr.c  ofp_bucket.c  ofp_bucket.h  ofp_bucket_counter.c  ofp_bucket_counter.h  ofp_common.h  ofp_desc_handler.c  ofp_desc_handler.h  ofp_dp_apis.c  ofp_dpqueue_mgr.c  ofp_dpqueue_mgr.h  ofp_echo_handler.c  ofp_echo_handler.h  (+86 more)
src/agent/check/: Makefile.in  trace.c
src/agent/test/: Makefile.in  agent_test.c  channel_mgr_apis_test.c  channel_mgr_test.c  dp_stub.c  (+60 more)
src/cmds/: Makefile.in  lagopus.c  lagopus.h  modulesub.c
src/config/: Makefile.in  cclient.c  cclient.h  chgroup.c  chgroup.h  clex.c  clex.h  clink.c  clink.h  cnode.c  cnode.h  command.txt  config_lex.l  config_parser.y  configuration.xml  confsys.c  confsys.h  cparse.c  cparse.h  cserver.c  cserver.h  cxml.c  cxml.h  operational.xml  show.c  show.h  validate.c  validate.h
src/dataplane/: Makefile.in
src/datastore/: Makefile.in  affinition_cmd.c  affinition_cmd.h  affinition_cmd_internal.h  agent_cmd.c  atomic_cmd.c  bridge.c  bridge_cmd.c  bridge_cmd.h  bridge_cmd_internal.h  channel.c  channel_cmd.c  channel_cmd.h  channel_cmd_internal.h  cmd_common.c  cmd_common.h  cmd_dump.c  cmd_dump.h  controller.c  controller_cmd.c  controller_cmd.h  controller_cmd_internal.h  conv_json.c  conv_json.h  conv_json_result.c  conv_json_result.h  datastore.c  datastore_apis.h  datastore_cmd.c  datastore_internal.h  datastore_interp_state.h  destroy_all_obj_cmd.c  dryrun_cmd.c  flow_cmd.c  flow_cmd.h  flow_cmd_dump.c  flow_cmd_internal.h  flow_cmd_mod.c  flow_cmd_type.h  group_cmd.c  (+52 more)
src/include/: Makefile.in  event.h  lagopus_apis.h  lagopus_argv0.h  lagopus_bbq.h  lagopus_callout.h  lagopus_callout_internal.h  lagopus_callout_task_funcs.h  lagopus_callout_task_state.h  lagopus_cbuffer.h  lagopus_chrono.h  lagopus_config.h.in  lagopus_dstring.h  lagopus_error.h  lagopus_gstate.h  lagopus_hashmap.h  lagopus_heapcheck.h  lagopus_includes.h  lagopus_ip_addr.h  lagopus_lock.h  lagopus_logger.h  lagopus_macros.h  lagopus_mainloop.h  lagopus_module_apis.h  lagopus_numa.h  lagopus_perror.h  lagopus_pipeline_stage.h  lagopus_pipeline_stage_funcs.h  lagopus_pipeline_stage_internal.h  lagopus_platform.h.in  lagopus_qmuxer.h  lagopus_qsort.h  lagopus_runnable.h  lagopus_runnable_funcs.h  lagopus_runnable_internal.h  lagopus_session.h  lagopus_session_tls.h  lagopus_signal.h  lagopus_statistic.h  lagopus_strutils.h  (+7 more)
src/lib/: Makefile.in  addrunion.c  argv0.c  callout.c  callout_queue.c  callout_stage.c  callout_task.c  cbuffer.c  chrono.c  dstring.c  error.c  event.c  gstate.c  hash.c  hash.h  hashmap.c  heapcheck.c  ip_addr.c  lock.c  logger.c  lpc.c  lpc.h  mainloop.c  module.c  numa.c  pbuf.c  pipeline_stage.c  pipeline_worker.c  ptree.c  qmuxer.c  qmuxer_internal.h  qmuxer_types.h  qpoll.c  qsort.c  runnable.c  session.c  session_checkcert.c  session_internal.h  session_tcp.c  session_tls.c  (+6 more)
src/snmp/: Makefile.in  coldStart.c  coldStart.h  dataplane_apis.h  dataplane_interface.c  dataplane_interface.h  dot1dBaseBridgeAddress.c  dot1dBaseBridgeAddress.h  dot1dBaseNumPorts.c  dot1dBaseNumPorts.h  dot1dBasePortTable.c  dot1dBasePortTable.h  dot1dBasePortTable_access.c  dot1dBasePortTable_access.h  dot1dBasePortTable_columns.h  dot1dBasePortTable_enums.h  dot1dBaseType.c  dot1dBaseType.h  dpapi_stub.c  ifNumber.c  ifNumber.h  ifTable.c  ifTable.h  ifTable_access.c  ifTable_access.h  ifTable_columns.h  ifTable_enums.h  ifTable_type.h  linkDown.c  linkDown.h  linkUp.c  linkUp.h  port_table_common.h  snmpmgr.c  warmStart.c  warmStart.h
test/ryu/: flow_stats.py  group_stats.py  match-test.dsl  match-test.sh  multiple-timeout.py  packet_in.py  port_stats.py  queue_stats.py  table_stats.py  tunnel-demo.py  tunnel_etherip.py  tunnel_gre.py  tunnel_mpls.py  tunnel_vxlan.py  vsw-565.py  vsw-594.dsl  vsw-594.py  vsw-594.sh  vsw-597.dsl  vsw-597.sh  vsw-598.py  vsw-602_mp_aggregate.py  vsw-602_mp_desc.py  vsw-602_mp_flow.py  vsw-602_mp_group_desc.py  vsw-602_mp_group_features.py  vsw-602_mp_group_stats.py  vsw-602_mp_meter_config.py  vsw-602_mp_meter_features.py  vsw-602_mp_meter_stats.py  vsw-602_mp_port_desc.py  vsw-602_mp_port_stats.py  vsw-602_mp_queue_stats.py  vsw-602_mp_table_features.py  vsw-602_mp_table_stats.py
tools/: Makefile.in
tools/benchmark/: Makefile.in  benchmark_generator.py  requirements.pip
(+904 files in other folders)
